--- a/Test_app/app/src/main/AndroidManifest.xml
+++ b/Test_app/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test_app">
         <activity
+            android:name=".SideActivity"
+            android:exported="false" />
+        <activity
             android:name=".SettingsActivity"
             android:exported="false" />
         <activity
