--- a/Test_app/settings.gradle
+++ b/Test_app/settings.gradle
@@ -4,6 +4,8 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://slabs-yieldlove-ad-integration.s3.eu-central-1.amazonaws.com/android' }
+        maven { url 'https://maven.google.com' }
     }
 }
 rootProject.name = "Test_app"
