--- a/Test_app/app/build.gradle
+++ b/Test_app/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.yieldlove.adIntegration:yieldlove:6.2.1'
     implementation 'com.yieldlove.adIntegration:cmp:3.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
@@ -42,4 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
